[package]
name = "wambo"
description = "Wambo - All-in-one binary to convert decimal/bin/oct/hex + interpret data as i8-i64, u8-u64, and f32/f64."
version = "0.2.12"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"
keywords = ["converter", "binary", "hex", "IEEE-754", "bytes"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/wambo"
repository = "https://github.com/phip1611/wambo"
documentation = "https://docs.rs/wambo/"

exclude = [
    ".editorconfig",
    ".github",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
derive_more = { version = "0.99", default-features = false, features = ["display"] }
fraction_list_fmt_align = "0.2"
regex = "1.6"
tui = "0.19" # uses crossterm as backend by default

